invoice init
