# internal/models/models.go
@@ -6,7 +6,6 @@ import (
 	"github.com/google/uuid"
 )
 
-
 type Debt struct {
 	ID           uuid.UUID  `json:"id"`
 	InvoiceID    *uuid.UUID `json:"invoice_id"`
@@ -26,4 +25,15 @@ type Category struct {
 	Description *string   `json:"description"`
 	CreatedAt   time.Time `json:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at"`
+}
+
+type Invoice struct {
+	ID        uuid.UUID `json:"id"`
+	Title     string    `json:"title"`
+	Amount    float64   `json:"amount"`
+	IssueDate time.Time `json:"issue_date"`
+	DueDate   time.Time `json:"due_date"`
+	StatusID  uuid.UUID `json:"status_id"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
